# gulama-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD_SPECIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GULAMA_MASTER_SPEC.md  LICENSE  MANIFEST.in  Makefile  OpenClaw_Security_Analysis_and_Strategy.md  PROJECT_SPEC.md  README.md  SECURITY.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
deploy/: Caddyfile
scripts/: install.ps1  install.sh  migrate_openclaw.py  security_audit.py  test_e2e.py
src/: __init__.py  constants.py  main.py
src/agent/: __init__.py  brain.py  context_builder.py  llm_router.py  persona.py  sub_agents.py  tool_executor.py
src/channels/: __init__.py  base.py  cli.py  discord_adapter.py  google_chat.py  matrix.py  scheduler.py  slack.py  teams.py  telegram.py  voice_wake.py  web.py  whatsapp.py
src/cli/: __init__.py  commands.py  doctor.py  setup_wizard.py
src/gateway/: __init__.py  app.py  auth.py  config.py  debug_ws.py  health.py  middleware.py  router.py  websocket.py
src/memory/: __init__.py  encryption.py  migration.py  schema.py  store.py  summarizer.py  vector_store.py
src/security/: __init__.py  audit_logger.py  canary.py  compliance.py  egress_filter.py  input_validator.py  policy_engine.py  rbac.py  sandbox.py  secrets_vault.py  skill_verifier.py  sso.py  team.py  threat_detector.py
src/skills/: __init__.py  base.py  marketplace.py  registry.py  scanner.py  self_modifier.py  signer.py
src/skills/builtin/: __init__.py  browser.py  calendar_skill.py  code_exec.py  email_skill.py  file_manager.py  github_skill.py  google_docs_skill.py  image_gen.py  mcp_bridge.py  notes.py  notion_skill.py  productivity_skill.py  shell_exec.py  smart_home.py  spotify_skill.py  twitter_skill.py  voice_skill.py  web_search.py
src/utils/: __init__.py  cost_tracker.py  logging.py  platform.py
tests/: conftest.py  test_compliance.py  test_config.py  test_cost_tracker.py  test_doctor.py  test_encryption.py  test_memory_store.py  test_rbac.py  test_sso.py  test_team.py  test_threat_detector.py  test_vault.py
tests/integration/: __init__.py  test_agent_flow.py  test_gateway.py  test_skills.py
tests/security/: test_audit_logger.py  test_canary.py  test_credential_leak.py  test_egress_filter.py  test_input_validator.py  test_policy_engine.py  test_prompt_injection.py  test_sandbox_escape.py  test_skill_tampering.py  test_websocket_hijack.py
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  Chat.tsx  Dashboard.tsx  Settings.tsx  index.css
